# puffer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/puffer-desktop/: .gitignore  .vercelignore  package-lock.json  package.json  vercel.json  vite.config.ts
benchmark/: README.md  __init__.py  puffer_harbor_agent.py  run_tb2.py
benchmark/codex-runs/: qwen35_parser_test.py  shim_parser_test.py
crates/puffer-cli/: Cargo.toml
crates/puffer-config/: Cargo.toml
crates/puffer-connector-core/: Cargo.toml
crates/puffer-core/: Cargo.toml  command.rs  command_helpers.rs  command_summary.rs  config_settings.rs  lib.rs  media_runtime.rs  media_runtime_generated_preview_tests.rs  media_runtime_tests.rs  media_runtime_video.rs  memory.rs  network.rs  permissions.rs  plan_mode.rs  plans.rs  runner_adapter.rs  runtime.rs  state.rs  tooling.rs  ultrareview.rs  workspace_paths.rs
crates/puffer-lark/: Cargo.toml
crates/puffer-observability/: Cargo.toml
crates/puffer-observability/src/: attributes.rs  hooks.rs  lib.rs  redaction.rs
crates/puffer-observability/src/tests/: mock_otlp.rs  mod.rs
crates/puffer-provider-openai/: Cargo.toml
crates/puffer-provider-registry/: Cargo.toml
crates/puffer-provider-registry/src/: auth.rs  discovery.rs  discovery_cache.rs  import.rs  input_capability.rs  lib.rs  media_capability.rs  model.rs  model_tests.rs  registry.rs  secure_oauth.rs
crates/puffer-resources/: Cargo.toml
crates/puffer-resources/src/: lib.rs  loader.rs  model.rs
crates/puffer-resources/tests/: canvas_offer_schema.rs  image_catalog_governance.rs  media_generation_skills.rs  provider_capability_axes.rs  video_tool_schema.rs
crates/puffer-secrets/: Cargo.toml
crates/puffer-secrets/src/: chromium.rs  der.rs  firefox.rs  keychain.rs  lib.rs  onepassword.rs  onepassword_1pux.rs  win_chrome_args.rs  win_chrome_import.rs
crates/puffer-session-store/: Cargo.toml
crates/puffer-session-store/src/: attachments.rs  events.rs  lib.rs  metadata.rs  store.rs
crates/puffer-skill-evolution/: generate.rs  judge.rs  lib.rs  parse.rs
crates/puffer-slack/: Cargo.toml
crates/puffer-slack/src/: auth.rs  client.rs  lib.rs  local_import.rs
crates/puffer-subscriber-telegram-user/: Cargo.toml
crates/puffer-subscriptions/: Cargo.toml
crates/puffer-subscriptions/src/: action.rs  catalog.rs  catalog_store.rs  catalog_tests.rs  classify.rs  command_match.rs  connection.rs  connector_process.rs  connector_stream.rs  contact_history.rs  contacts.rs  event_schema.rs  history.rs  lib.rs  manager.rs  manager_tests.rs  monitor_trace.rs  protocol.rs  proxy.rs  router.rs  router_debounce.rs  router_language_guard_tests.rs  router_monitor_rule_tests.rs  router_tests.rs  self_gate.rs  spec.rs  store.rs  subscriber_manifest.rs  telegram_e2e_tests.rs
crates/puffer-subscriptions/src/catalog/: schemas.rs  webhooks.rs
crates/puffer-subscriptions/src/manager/: connector_processor.rs
crates/puffer-subscriptions/src/router/: monitor_digest.rs  runtime.rs
crates/puffer-subscriptions/tests/: manager_runtime.rs
crates/puffer-test-support/: Cargo.toml
crates/puffer-tools/: Cargo.toml
crates/puffer-transport-anthropic/: Cargo.toml
crates/puffer-transport-anthropic/src/: auth.rs  cch.rs  fingerprint.rs  lib.rs  request.rs  response.rs  usage.rs
crates/puffer-transport-anthropic/tests/: cch_parity.rs
crates/puffer-tui/: Cargo.toml
crates/puffer-tui/src/: approval_overlay.rs  flow.rs  flow_auth.rs  flow_loop.rs  flow_monitor.rs  flow_shell.rs  flow_tests.rs  flow_ultrareview.rs  lib.rs  list_selection_view.rs  markdown.rs  markdown_render.rs  overlay_commands.rs  pentest.rs  pentest_command.rs  pentest_tests.rs  popup.rs  popup_connections.rs  popup_workflow_actions.rs  render.rs  state.rs  statusline.rs  task_overlay.rs  tests.rs  text_overlay.rs  usage.rs  user_question_overlay.rs
crates/puffer-tui/src/onboarding/: mod.rs
crates/puffer-tui/src/render/: composer.rs  loop_status.rs  overlay_content.rs  panes.rs  pending_submit.rs  scroll_tests.rs  summary.rs  tests.rs  tool_messages.rs  top_panel.rs
crates/puffer-tui/src/render/tool_messages/: tests.rs
crates/puffer-tui/src/tests/: login.rs  model_selection.rs  panels.rs  pending_submit.rs  permission_prompt.rs  slash_popup.rs  support.rs  user_question.rs
docker/cua-driver-native/: Dockerfile  start-desktop.sh
docs/: README.md
docs/architecture/: agent-loop.md  bobo-daemon-contract.md  monitor-pipeline.md  permissions-and-skills.md
docs/observability/: langfuse-design.md
docs/reference/: slash-commands.md
fixtures/contact-contracts/: telegram-contact-picker-readiness.json
resources/agents/: explore.yaml  general-purpose.yaml  pentest-specialist.yaml  pentest-validator.yaml  plan.yaml
resources/canvas/: components.md
resources/hooks/: tool_end_echo.yaml
resources/ide/: vscode.yaml
resources/ides/: vscode.yaml
resources/internal_tools/: email.yaml  lark.yaml  slack.yaml  telegram.yaml  video_generation.yaml
resources/mascots/: clawd.yaml
resources/mcp/: docs.yaml  filesystem.yaml
resources/mcp_servers/: docs.yaml  filesystem.yaml
resources/plugins/: core-tools.yaml  core.yaml  example.yaml  puffer-builtins.yaml
resources/prompts/: btw.yaml  commit.yaml  compact.yaml  init.yaml  monitor-gmail-action.yaml  monitor-reply-action.yaml  monitor-telegram-action.yaml  pentest.yaml  plan.yaml  pr-comments.yaml  review.yaml  security-review.yaml  system-base.yaml
resources/providers/: anthropic.yaml  byteplus.yaml  bytepluses.yaml  kimi-coding.yaml  kimi-openai.yaml  kling.yaml  llama-cpp.yaml  lmstudio.yaml  minimax-cn.yaml  minimax.yaml  mistral.yaml  openai.yaml  openrouter.yaml  qwen35.yaml  relaydance.yaml  vercel-ai-gateway.yaml  vllm.yaml  worldrouter.yaml  xai.yaml  zhipu.yaml
resources/tools/: agent.yaml  (+56 more)
scripts/: bench-observe.sh  build-cua-driver.sh  check-doc-links.sh  check-slash-commands.sh  cua-computer-sandbox.sh  minicpm5-install.sh  minicpm5_shim.py  qwen35-install.sh  qwen35-recommend.sh  qwen35-serve.sh  qwen35_shim.py  report-large-files.sh  sign-dev-macos.sh
ui/: README.md
(+1182 files in other folders)
