[package]
name = "puffer-observability"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

# OTel core + SDK + OTLP/HTTP exporter. We deliberately use the
# blocking subset so the rest of puffer (reqwest::blocking) does not
# have to migrate to async. SimpleSpanProcessor + reqwest-blocking
# means each span ends with a synchronous POST — bounded latency,
# bounded memory, no background runtime required.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry-semantic-conventions = "0.27"

[dev-dependencies]
tempfile.workspace = true
