[package]
name = "puffer-provider-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
indexmap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
uuid.workspace = true
puffer-config = { path = "../puffer-config" }

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
