[package]
name = "puffer-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow.workspace = true
chacha20poly1305 = "0.10"
base64.workspace = true
cbc = { version = "0.1", features = ["alloc"] }
des = "0.8"
dirs.workspace = true
hmac = "0.12"
pbkdf2 = "0.12"
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2.workspace = true
tempfile.workspace = true
uuid.workspace = true
# Reading 1Password `.1pux` export archives (a ZIP wrapping export.data JSON).
zip = { version = "2", default-features = false, features = ["deflate"] }

# Windows Chrome/Chromium (DPAPI + App-Bound Encryption) credential import.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
