[package]
name = "puffer-session-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
puffer-config = { path = "../puffer-config" }

[dev-dependencies]
tempfile.workspace = true
