[package]
name = "puffer-subscriptions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
puffer-subscriber-runtime = { path = "../puffer-subscriber-runtime" }
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tracing = "0.1"
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
