[package]
name = "puffer-transport-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
indexmap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
url = "2.5.7"
puffer-provider-registry = { path = "../puffer-provider-registry" }
